--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="text">
                 <h3>Ola, Pessoal</h3>
                 <h1>Eu sou <span>Leonardo Costa</span></h1>
-                <p>Lorem Ipsum é simplesmente uma simulação de texto<br>da indústria tipográfica e de impressos</p>
+                <p>Tenho 15 anos sou desenvolvedor geral com 8 meses de experiência trabalhando com Programação </p>
                 <div class="redes-social">
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
