--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <div class="redes-social">
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-dribbble"></i></a>
+                    <a href="https://www.instagram.com/leonardo_coxta/?hl=pt"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
                     <a href="#"><i class="fa-brands fa-behance"></i></a>
                 </div><!--redes-social-->
                 <button class="btn">Sobre Mim</button>
