--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                     <a href="https://www.instagram.com/leonardo_coxta/?hl=pt"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.youtube.com/channel/UC1ABlpkxVozG5-6yI4d29gQ"><i class="fa-brands fa-youtube"></i></a>
                     <a href="#"><i class="fa-brands fa-behance"></i></a>
                 </div><!--redes-social-->
                 <button class="btn">Sobre Mim</button>
