--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-    <div class="background">
-        <header>
+    <header class="background">
+        <div>
             <div class="logo">
                 <i class="fa-regular fa-e"></i>
             </div><!--logo-->
